fixed spacing on mobile

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -1548,6 +1548,10 @@ video {
   padding: 0px;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
